# smart-aquarium

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  pump.rs  sensor.rs  water.rs
